# mpdroot

./: .gitignore  .gitlab-ci.yml  .gitmodules  CDash_Env_MpdRoot.sh  CDash_ShortHelp.txt  CDash_Test.sh  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  MpdRoot_test.cmake  README  SetEnv.sh  nicaroot
bmd/: BmdContFact.cxx  BmdContFact.h  BmdDetector.cxx  BmdDetector.h  BmdDigi.cxx  BmdDigi.h  BmdDigiPar.cxx  BmdDigiPar.h  BmdDigiProducer.cxx  BmdDigiProducer.h  BmdDigiScheme.cxx  BmdDigiScheme.h  BmdGeo.cxx  BmdGeo.h  BmdGeoPar.cxx  BmdGeoPar.h  BmdPoint.cxx  BmdPoint.h  BmdTstSim.cxx  BmdTstSim.h  CMakeLists.txt  bmdLinkDef.h
clustering/: CMakeLists.txt  ClManager.cxx  ClManager.h  Cluster.cxx  Cluster.h  ClusterCollection.cxx  ClusterCollection.h  ClusterElement.cxx  ClusterElement.h  ClusterLinkDef.h
emc/: CMakeLists.txt  Index_ENG.html  MpdEmc.cxx  MpdEmc.h  MpdEmcCalibParams.cxx  MpdEmcCalibParams.h  MpdEmcCluster.cxx  MpdEmcCluster.h  MpdEmcClusterCreation.cxx  MpdEmcClusterCreation.h  MpdEmcClusterFinderAZ.cxx  MpdEmcClusterFinderAZ.h  MpdEmcContFact.h  MpdEmcDigit.cxx  MpdEmcDigit.h  MpdEmcDigitizer.cxx  MpdEmcDigitizer.h  MpdEmcGeo.cxx  MpdEmcGeoPar.cxx  MpdEmcGeoPar.h  MpdEmcGeoParams.cxx  MpdEmcGeoParams.h  MpdEmcHit.cxx  MpdEmcHit.h  MpdEmcHitCreation.cxx  MpdEmcHitCreation.h  MpdEmcHitProducer.cxx  MpdEmcHitProducer.h  MpdEmcLinkDef.h  MpdEmcMatch.cxx  MpdEmcMatch.h  MpdEmcMatching.cxx  MpdEmcMatching.h  MpdEmcPoint.cxx  MpdEmcPoint.h  emc.h
etof/: CMakeLists.txt  MpdEtof.cxx  MpdEtof.h  MpdEtofGeo.h  MpdEtofGeoPar.cxx  MpdEtofGeoUtils.cxx  MpdEtofGeoUtils.h  MpdEtofHit.cxx  MpdEtofHit.h  MpdEtofHitProducer.cxx  MpdEtofHitProducer.h  MpdEtofHitProducerIdeal.cxx  MpdEtofHitProducerIdeal.h  MpdEtofLinkDef.h  MpdEtofMatching.cxx  MpdEtofMatching.h  MpdEtofPoint.cxx  MpdEtofPoint.h
ffd/: CMakeLists.txt  MpdFfd.cxx  MpdFfd.h  MpdFfdContFact.cxx  MpdFfdContFact.h  MpdFfdGeo.cxx  MpdFfdGeo.h  MpdFfdGeoPar.cxx  MpdFfdHit.cxx  MpdFfdHit.h  MpdFfdHitProducer.cxx  MpdFfdHitProducer.h  MpdFfdLinkDef.h  MpdFfdPoint.cxx  MpdFfdPoint.h
fsa/: CMakeLists.txt  MpdFsa.cxx  MpdFsaContFact.cxx  MpdFsaGeo.cxx  MpdFsaGeoPar.cxx  MpdFsaHit.cxx  MpdFsaHit.h  MpdFsaHitProducer.cxx  MpdFsaHitProducer.h  MpdFsaHitProducer_old.cxx  MpdFsaLinkDef.h  MpdFsaPoint.cxx  MpdFsaPoint.h
generators/: CMakeLists.txt  FairAsciiGenerator.h  FairEvtGenGenerator.cxx  FairIonGenerator.cxx  FairShieldGenerator.h  FairUrqmdGenerator.cxx  GenLinkDef.h  Mpd3fdGenerator.cxx  Mpd3fdGenerator.h  MpdCosmicGenerator.cxx  MpdCosmicGenerator.h  MpdDCMSMMGenerator.cxx  MpdDCMSMMGenerator.h  MpdDecayer.cxx  MpdDecayer.h  MpdDecayerPyt8.cxx  MpdDecayerPyt8.h  MpdEPOSGenerator.cxx  MpdEPOSGenerator.h  MpdFreezoutGenerator.cxx  MpdFreezoutGenerator.h  MpdGetNumEvents.cxx  MpdGetNumEvents.h  MpdHistoGenerator.cxx  MpdHistoGenerator.h  MpdHypYPtGenerator.cxx  MpdHypYPtGenerator.h  MpdLAQGSMGenerator.cxx  MpdLAQGSMGenerator.h  MpdMCEventHeader.cxx  MpdMcDstGenerator.cxx  MpdMcDstGenerator.h  MpdPHQMDGenerator.cxx  MpdPHQMDGenerator.h  MpdPHSDGenerator.cxx  MpdPHSDGenerator.h  MpdPlutoGenerator.cxx  MpdSmashGenerator.cxx  MpdSmashGenerator.h  MpdTPythia8Generator.cxx  (+7 more)
kalman/: CMakeLists.txt  KalmanLinkDef.h  MpdKalmanFilter.cxx  MpdKalmanFilter.h  MpdKalmanGeoScheme.cxx  MpdKalmanGeoScheme.h  MpdKalmanHit.cxx  MpdKalmanHit.h  MpdKalmanTrack.cxx  MpdKalmanTrack.h  MpdTpcKalmanTrack.cxx  MpdTpcKalmanTrack.h
lhetrack/: CMakeLists.txt  LHETrackLinkDef.h  MpdCellAutomat.cxx  MpdCellAutomat.h  MpdCellTrack.h  MpdEctKalmanTrack.cxx  MpdEctKalmanTrack.h  MpdEctTrackFinderCpc.cxx  MpdEctTrackFinderCpc.h  MpdEctTrackFinderTof.cxx  MpdEctTrackFinderTof.h  MpdEctTrackFinderTofTpc.h  MpdEctTrackFinderTpc.cxx  MpdEctTrackFinderTpc.h  MpdItsKalmanTrack.cxx  MpdItsKalmanTrack.h  MpdItsToTpcMatching.cxx  MpdItsToTpcMatching.h  MpdKfPrimaryVertexFinder.cxx  MpdKfPrimaryVertexFinder.h  MpdKfV0Fitter.cxx  MpdKfV0Fitter.h  MpdKinFitter.cxx  MpdKinFitter.h  MpdMotherFitterPart.cxx  MpdMotherFitterPart.h  MpdMotherFitterSimple.cxx  MpdMotherFitterSimple.h  MpdParticle.cxx  MpdParticle.h  MpdSftTrackFinderTpc.cxx  MpdTpcDedxTask.cxx  MpdTpcDedxTask.h  MpdTpcKalmanFilter.cxx  MpdTpcKalmanFilter.h  MpdTpcKalmanTrack.cxx  MpdTpcTrackFollow2Sft.h  MpdTrackFinderIts.cxx  MpdTrackFinderIts.h  MpdTrackFinderIts5spd.cxx  (+27 more)
macro/: CMakeLists.txt
mpd_db/: CMakeLists.txt  Makefile  MpdDbComponent.cxx  MpdDbComponent.h  MpdDbComponentType.cxx  MpdDbComponentType.h  MpdDbConnection.cxx  MpdDbConnection.h  MpdDbGenerateClasses.cxx  MpdDbGenerateClasses.h  MpdDbGeoConverter.cxx  MpdDbGeoConverter.h  MpdDbGeoParameter.cxx  MpdDbGeoShape.cxx  MpdDbLinkDef.h  MpdDbManufacturer.cxx  MpdDbParser.cxx  MpdDbParser.h  MpdDbRunData.cxx  MpdDbRunData.h  MpdDbTangoData.cxx  MpdDbTangoData.h  MpdGeoParameter.cxx  MpdGeoParameter.h  db_settings.h  generate_cxx_from_db.C  get_mpd_prod  get_mpd_prod.cxx  parse_xml.C  test_db.C  uni_db.sql  write_geo_to_db.C
mpdbase/: CMakeLists.txt  MpdBaseLinkDef.h  MpdCodeTimer.cxx  MpdCodeTimer.h  MpdEvent.h  MpdGenTrack.cxx  MpdGenTrack.h  MpdGenTrackTask.cxx  MpdGenTrackTask.h  MpdHelix.cxx  MpdHelix.h  MpdTrack.cxx  MpdTrack.h  MpdVertex.cxx  MpdVertex.h
mpddata/: CMakeLists.txt  MpdDataLinkDef.h  MpdDstCompressTask.cxx  MpdDstCompressTask.h  MpdEvent.cxx  MpdEvent.h  MpdFillDstTask.cxx  MpdFillDstTask.h  MpdParticle.cxx  MpdParticle.h  MpdTrack.cxx  MpdTrack.h  MpdVertex.h
mpdfield/: CMakeLists.txt  MpdConstField.h  MpdConstPar.cxx  MpdFieldContFact.cxx  MpdFieldCreator.cxx  MpdFieldCreator.h  MpdFieldMap.cxx  MpdFieldMap.h  MpdFieldMapData.h  MpdFieldMapSym3.cxx  MpdFieldMapSym3.h  MpdMapPar.h  MpdMultiField.cxx  MpdMultiFieldPar.h  MpdRegion.cxx
mpdpid/: CMakeLists.txt  MpdPid.cxx  MpdPid.h  MpdPidLinkDef.h  MpdPidQA.cxx  MpdPidQA.h  MpdPidUtils.h  MpdPid_AZ.cxx  MpdPid_AZ.h  README.md
ndet/: CMakeLists.txt  MpdNDetParam.h  MpdNDetPoint.cxx  MpdNDetPointLite.cxx
nica_mpd/: CMakeLists.txt
physics/: CMakeLists.txt  LinkDef.h  MpdRoInvMassTask.cxx  MpdRoInvMassTask.h
sft/: CMakeLists.txt  MpdSftContFact.cxx  (+5 more)
(+2319 files in other folders)
